--- a/info.html
+++ b/info.html
@@ -38,7 +38,7 @@
                 <h1>About <span>Us</span></h1>
                 <img src="./assets/files/me.jpg" alt="Admin">
                 <hr>
-                <p>Adventour is a travel website project developed by Amit using HTML, CSS and JavaScript.<br>
+                <p>Adventour is a travel website project developed using HTML, CSS and JavaScript.<br>
                     Our team is composed of skilled professionals who are experts in their respective fields. We
                     continuously
                     strive for excellence and innovation, constantly seeking ways to improve and exceed customer
@@ -105,7 +105,7 @@
         </div>
 
         <div class="end">
-            <p>Copyright © 2023 Adventour All Rights Reserved.<br>Website developed by: Amit Kumar Singh</p>
+            <p>Copyright © 2024 Adventour All Rights Reserved.<br></p>
         </div>
     </section>
 
